Puse los constructores y "armé" la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=4042
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/ms_productos_db
+spring.datasource.username=user_productos
+spring.datasource.password=3be43125f05dc87c9b5f27533daf2f01
