--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_productos_db
 spring.datasource.username=user_productos
 spring.datasource.password=3be43125f05dc87c9b5f27533daf2f01
+spring.artemis.host=localhost
+spring.artemis.port=61616
+spring.artemis.user=dan2021
+spring.artemis.password=dan2021
+spring.artemis.mode=native
